--- a/TerraformWorkShop/Quadlet/SvcDisc-vault/podman-vault/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-vault/podman-vault/values-sololab.yaml
@@ -59,9 +59,9 @@ vault:
     enabled: true
     env:
       - name: VAULT_ADDR
-        value: https://vault:8200
+        value: https://{{ template "common.names.fullname" . }}:8200
       - name: VAULT_OPERATOR_SECRETS_JSON_PATH
-        value: "/vault/unseal/vault_operator_secrets"
+        value: "/vault/unseal/vault_operator_secrets_b64"
 
 volumePermissions:
   enabled: true
