--- a/TerraformWorkShop/Quadlet/SvcDisc-consul/podman-consul/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-consul/podman-consul/values-sololab.yaml
@@ -36,7 +36,7 @@ consul:
       protocol: TCP
   ## @param consul.configFiles
   configFiles:
-    general:
+    main:
       ports:
         https: 8501
       # https://github.com/hashicorp/learn-consul-docker/blob/110bc9484b0dcd714e64604cd011a360d03b9bc6/datacenter-deploy-auto-config/vault/consul/server2.json#L33
@@ -55,7 +55,6 @@ consul:
               /consul/hostname: node_name
             claim_assertions:
               - value.node_name == "${node}"
-    acl:
       acl:
         enabled: true
         default_policy: deny
@@ -64,9 +63,7 @@ consul:
           initial_management: e95b599e-166e-7d80-08ad-aee76e7ddf19
           agent: e95b599e-166e-7d80-08ad-aee76e7ddf19
           config_file_service_registration: e95b599e-166e-7d80-08ad-aee76e7ddf19
-    encryption:
       encrypt: aPuGh+5UDskRAbkLaXRzFoSOcSM+5vAK+NEYOWHJH7w=
-    tls:
       tls:
         defaults:
           ca_file: /consul/config/certs/ca.crt
