--- a/TerraformWorkShop/Quadlet/SvcDisc-consul/podman-consul/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-consul/podman-consul/values-sololab.yaml
@@ -96,13 +96,13 @@ consul:
   ## why not pass the advertise ip into args?
   ## args only accept plain text command, not accept variable which come with expression
   ##
-  command:
-    - "/bin/sh"
-    - "-c"
-    - |
-      sed -e '/$CONSUL_BIND \\/i\' -e '    -advertise=$(getent hosts SvcDisc-FCOS.day1.sololab | awk '\''{print $1}'\'') \\' /usr/local/bin/docker-entrypoint.sh > /tmp/docker-entrypoint.sh
-      chmod +x /tmp/docker-entrypoint.sh
-      exec /tmp/docker-entrypoint.sh "$0" "$@"
+  # command:
+  #   - "/bin/sh"
+  #   - "-c"
+  #   - |
+  #     sed -e '/$CONSUL_BIND \\/i\' -e '    -advertise=192.168.255.20 \\' /usr/local/bin/docker-entrypoint.sh > /tmp/docker-entrypoint.sh
+  #     chmod +x /tmp/docker-entrypoint.sh
+  #     exec /tmp/docker-entrypoint.sh "$0" "$@"
   ## @param consul.args Override default container args (useful when using custom images)
   ## ref: https://blog.christophersmart.com/2021/01/31/podman-volumes-and-selinux/
   ##
