nomad-tf-podman_kube: add script to bootstrap acl

--- a/TerraformWorkShop/Quadlet/SvcDisc-nomad/podman-nomad/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-nomad/podman-nomad/values-sololab.yaml
@@ -41,3 +41,10 @@ nomad:
       value: /nomad/config
     - name: TZ
       value: Asia/Shanghai
+  extraVolumes:
+    - name: token
+      persistentVolumeClaim:
+        claimName: nomad-pvc-token
+  extraVolumeMounts:
+    - name: token
+      mountPath: /etc/profile.d
