--- a/TerraformWorkShop/Hyper-V/VM-SvcDisc-FCOS/Butane/user.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-SvcDisc-FCOS/Butane/user.yaml
@@ -57,6 +57,12 @@ storage:
         id: 1001
       group:
         id: 1001
+    - path: /var/home/podmgr/consul-services
+      mode: 0755
+      user:
+        id: 1001
+      group:
+        id: 1001
     - path: /var/home/podmgr/.config
       mode: 0755
       user:
