--- a/TerraformWorkShop/Quadlet/SvcDisc-traefik/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-traefik/podman-traefik/values-sololab.yaml
@@ -2,17 +2,27 @@ global:
   imageRegistry: zot.day0.sololab
 traefik:
   image:
-    registry: zot.day0.sololab
-    repository: library/traefik
-    tag: v3.0.1
+    tag: v3.3
   containerSecurityContext:
     enabled: true
     seLinuxOptions:
       type: spc_t
   staticConfiguration:
+    providers:
+      consulCatalog:
+        endpoint:
+          address: consul.day1.sololab:8501
+          datacenter: dc1
+          scheme: https
+          tls:
+            ca: /etc/traefik/tls/ca.crt
+    exposedByDefault: false
     serversTransport:
       rootCAs:
         - /etc/traefik/tls/ca.crt
+    global:
+      checkNewVersion: false
+      sendAnonymousUsage: false
     entryPoints:
       web:
         forwardedHeaders:
@@ -22,8 +32,23 @@ traefik:
         forwardedHeaders:
           trustedIPs:
             - "0.0.0.0/0"
+    certificatesResolvers:
+      external:
+        acme:
+          caServer: https://acme-v02.api.letsencrypt.org/directory
+          certificatesDuration: 2160
+          email: ""
+          storage: /mnt/acmeStorage/external.json
+          tlsChallenge: {}
+      internal:
+        acme:
+          caServer: https://vault.day1.sololab:8200/v1/pki/day1/acme/directory
+          certificatesDuration: 2160
+          email: ""
+          storage: /mnt/acmeStorage/internal.json
+          tlsChallenge: {}
     log:
-      level: DEBUG
+      level: WARN
   dynamicConfigurationFiles:
     # https://traefik.io/blog/traefik-2-tls-101-23b4fbee81f1/
     tlsCerts.yaml:
@@ -31,17 +56,17 @@ traefik:
         certificates:
           - certFile: /etc/traefik/tls/dashboard.crt
             keyFile: /etc/traefik/tls/dashboard.key
-  podLabels:
-    traefik.enable: true
-    traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
-    traefik.http.routers.dashboard-redirect.entrypoints: web
-    traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
-    traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
-    traefik.http.routers.dashboard.entryPoints: webSecure
-    traefik.http.routers.dashboard.tls: true
-    traefik.http.routers.dashboard.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
-    traefik.http.routers.dashboard.service: api@internal
-    traefik.http.routers.dashboard.middlewares: userPass
+  # podLabels:
+  #   traefik.enable: true
+  #   traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
+  #   traefik.http.routers.dashboard-redirect.entrypoints: web
+  #   traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+  #   traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
+  #   traefik.http.routers.dashboard.entryPoints: webSecure
+  #   traefik.http.routers.dashboard.tls: true
+  #   traefik.http.routers.dashboard.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+  #   traefik.http.routers.dashboard.service: api@internal
+  #   traefik.http.routers.dashboard.middlewares: userPass
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
@@ -49,3 +74,6 @@ traefik:
       value: /etc/traefik/tls/ca.crt
     - name: LEGO_CA_SYSTEM_CERT_POOL
       value: "true"
+persistence:
+  enabled: true
+  mountPath: /mnt/acmeStorage
