--- a/TerraformWorkShop/Quadlet/SvcDisc-traefik/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-traefik/podman-traefik/values-sololab.yaml
@@ -3,6 +3,7 @@ global:
 traefik:
   image:
     tag: v3.3
+  containerPorts: []
   containerSecurityContext:
     enabled: true
     seLinuxOptions:
@@ -48,7 +49,7 @@ traefik:
           storage: /mnt/acmeStorage/internal.json
           tlsChallenge: {}
     log:
-      level: WARN
+      level: DEBUG
   dynamicConfigurationFiles:
     # https://traefik.io/blog/traefik-2-tls-101-23b4fbee81f1/
     tlsCerts.yaml:
@@ -56,17 +57,17 @@ traefik:
         certificates:
           - certFile: /etc/traefik/tls/dashboard.crt
             keyFile: /etc/traefik/tls/dashboard.key
-  # podLabels:
-  #   traefik.enable: true
-  #   traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
-  #   traefik.http.routers.dashboard-redirect.entrypoints: web
-  #   traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
-  #   traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
-  #   traefik.http.routers.dashboard.entryPoints: webSecure
-  #   traefik.http.routers.dashboard.tls: true
-  #   traefik.http.routers.dashboard.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
-  #   traefik.http.routers.dashboard.service: api@internal
-  #   traefik.http.routers.dashboard.middlewares: userPass
+  podLabels:
+    traefik.enable: true
+    traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
+    traefik.http.routers.dashboard-redirect.entrypoints: web
+    traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
+    traefik.http.routers.dashboard.entryPoints: webSecure
+    traefik.http.routers.dashboard.tls: true
+    traefik.http.routers.dashboard.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    traefik.http.routers.dashboard.service: api@internal
+    traefik.http.routers.dashboard.middlewares: userPass
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
@@ -74,6 +75,14 @@ traefik:
       value: /etc/traefik/tls/ca.crt
     - name: LEGO_CA_SYSTEM_CERT_POOL
       value: "true"
+  extraVolumes:
+    - name: docker-socket
+      hostPath:
+        path: /run/user/1001/podman/podman.sock
+        type: Socket
+  extraVolumeMounts:
+    - name: docker-socket
+      mountPath: /var/run/docker.sock
 persistence:
   enabled: true
   mountPath: /mnt/acmeStorage
