nomad-tf-acl: add pasta specify host aliases for vault, to make nomad container enable to reach 443 port to traefik reverse proxy vault-tf-oidc: remove port number 8200 in issuer_host, use 443 by default

--- a/TerraformWorkShop/Quadlet/SvcDisc-nomad/podman-nomad/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-nomad/podman-nomad/values-sololab.yaml
@@ -4,6 +4,11 @@ nomad:
   image:
     repository: multani/nomad
     tag: "1.9.5"
+  # https://github.com/containers/podman/discussions/23322#discussioncomment-12340550
+  hostAliases:
+    - ip: "host-gateway"
+      hostnames:
+        - "vault.day1.sololab"
   livenessProbe:
     enabled: true
     initialDelaySeconds: 30
