--- a/TerraformWorkShop/Quadlet/Infra-powerdns/podman-powerdns/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/Infra-powerdns/podman-powerdns/values-sololab.yaml
@@ -1,30 +1,6 @@
 global:
   imageRegistry: 192.168.255.10:5000
 powerdns:
-  containerPorts:
-    - name: dns-tcp
-      containerPort: 1053
-      hostPort: 53
-      hostIP: 192.168.255.10
-      protocol: TCP
-    - name: dns-udp
-      containerPort: 1053
-      hostPort: 53
-      hostIP: 192.168.255.10
-      protocol: UDP
-    - name: web
-      containerPort: 8081
-      hostPort: 8081
-      protocol: TCP
-  extraEnvVars:
-    - name: TZ
-      value: Asia/Shanghai
-  configFiles:
-    ddns:
-      allow-dnsupdate-from: 0.0.0.0/0
-      dnsupdate: yes
-    debug:
-      webserver-loglevel: detailed
   ## @param powerdns.podLabels Extra labels for %%MAIN_CONTAINER_NAME%% pods
   ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
   ##
@@ -44,3 +20,49 @@ powerdns:
   ##
   podAnnotations:
     io.podman.annotations.userns: keep-id:uid=953,gid=953
+  containers:
+    auth:
+      containerPorts:
+        - name: dns-tcp
+          containerPort: 1053
+          hostPort: 1053
+          hostIP: 192.168.255.10
+          protocol: TCP
+        - name: dns-udp
+          containerPort: 1053
+          hostPort: 1053
+          hostIP: 192.168.255.10
+          protocol: UDP
+        - name: web
+          containerPort: 8081
+          hostPort: 8081
+          hostIP: 192.168.255.10
+          protocol: TCP
+      extraEnvVars:
+        - name: TZ
+          value: Asia/Shanghai
+      config:
+        # ddns:
+        allow-dnsupdate-from: 0.0.0.0/0
+        dnsupdate: yes
+        # debug:
+        webserver-loglevel: detailed
+    recursor:
+      containerPorts:
+        - name: dns-tcp
+          containerPort: 2053
+          hostPort: 53
+          hostIP: 192.168.255.10
+          protocol: TCP
+        - name: dns-udp
+          containerPort: 2053
+          hostPort: 53
+          hostIP: 192.168.255.10
+          protocol: UDP
+        - name: web
+          containerPort: 8082
+          hostPort: 8082
+          hostIP: 192.168.255.10
+          protocol: TCP
+      config:
+        forward-zones: day0.sololab=192.168.255.10:1053
