--- a/TerraformWorkShop/Quadlet/Infra-traefik/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/Infra-traefik/podman-traefik/values-sololab.yaml
@@ -1,23 +1,22 @@
 global:
-  imageRegistry: zot.day0.sololab
-workloadKind: ""
+  imageRegistry: zot.day0.sololab:5000
 traefik:
   image:
-    tag: v3.3
+    tag: v3.3.4
   containerPorts: []
   containerSecurityContext:
     enabled: true
     seLinuxOptions:
       type: spc_t
   staticConfiguration:
-    providers:
-      consulCatalog:
-        endpoint:
-          address: consul.day1.sololab:8501
-          datacenter: dc1
-          scheme: https
-          tls:
-            ca: /etc/traefik/tls/ca.crt
+    # providers:
+    #   consulCatalog:
+    #     endpoint:
+    #       address: consul.day1.sololab:8501
+    #       datacenter: dc1
+    #       scheme: https
+    #       tls:
+    #         ca: /etc/traefik/tls/ca.crt
     exposedByDefault: false
     serversTransport:
       rootCAs:
@@ -26,31 +25,35 @@ traefik:
       checkNewVersion: false
       sendAnonymousUsage: false
     entryPoints:
+      traefik:
+        address: "192.168.255.10:8080"
       web:
+        address: "192.168.255.10:80"
         forwardedHeaders:
           trustedIPs:
             - "0.0.0.0/0"
       webSecure:
+        address: "192.168.255.10:443"
         forwardedHeaders:
           trustedIPs:
             - "0.0.0.0/0"
-    certificatesResolvers:
-      external:
-        acme:
-          caServer: https://acme-v02.api.letsencrypt.org/directory
-          certificatesDuration: 2160
-          email: ""
-          storage: /mnt/acmeStorage/external.json
-          tlsChallenge: {}
-      internal:
-        acme:
-          caServer: https://vault.day1.sololab:8200/v1/pki/day1/acme/directory
-          certificatesDuration: 2160
-          email: ""
-          storage: /mnt/acmeStorage/internal.json
-          tlsChallenge: {}
+    # certificatesResolvers:
+    #   external:
+    #     acme:
+    #       caServer: https://acme-v02.api.letsencrypt.org/directory
+    #       certificatesDuration: 2160
+    #       email: ""
+    #       storage: /mnt/acmeStorage/external.json
+    #       tlsChallenge: {}
+    #   internal:
+    #     acme:
+    #       caServer: https://vault.day1.sololab:8200/v1/pki/day1/acme/directory
+    #       certificatesDuration: 2160
+    #       email: ""
+    #       storage: /mnt/acmeStorage/internal.json
+    #       tlsChallenge: {}
     log:
-      level: DEBUG
+      level: INFO
   dynamicConfigurationFiles:
     # https://traefik.io/blog/traefik-2-tls-101-23b4fbee81f1/
     tlsCerts.yaml:
@@ -62,13 +65,15 @@ traefik:
     traefik.enable: true
     traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
     traefik.http.routers.dashboard-redirect.entrypoints: web
-    traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
     traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
     traefik.http.routers.dashboard.entryPoints: webSecure
     traefik.http.routers.dashboard.tls: true
-    traefik.http.routers.dashboard.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    traefik.http.routers.dashboard.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
     traefik.http.routers.dashboard.service: api@internal
     traefik.http.routers.dashboard.middlewares: userPass
+    # https://community.traefik.io/t/api-not-accessible-when-traefik-in-host-network-mode/13321/2
+    traefik.http.services.dashboard.loadbalancer.server.port: 443
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
