--- a/TerraformWorkShop/Quadlet/Infra-lldap/podman-lldap/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/Infra-lldap/podman-lldap/values-sololab.yaml
@@ -17,9 +17,11 @@ lldap:
       - name: net.ipv4.ip_unprivileged_port_start
         value: "389"
   config:
-    ldap_host: 192.168.255.10
+    # https://github.com/lldap/lldap/blob/1f89059c84d700ca198b2785657f33f438ea3e11/server/src/healthcheck.rs#L74
+    # health check function only support localhost
+    # ldap_host: 192.168.255.10
     # ldap_port: 389
-    http_host: 192.168.255.10
+    # http_host: 192.168.255.10
     # http_port: 17170
     jwt_secret: REPLACE_WITH_RANDOM
     ldap_base_dn: dc=root,dc=sololab
