--- a/TerraformWorkShop/Quadlet/Infra-traefik/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/Infra-traefik/podman-traefik/values-sololab.yaml
@@ -8,59 +8,61 @@ traefik:
     enabled: true
     seLinuxOptions:
       type: spc_t
-  staticConfiguration:
-    # providers:
-    #   consulCatalog:
-    #     endpoint:
-    #       address: consul.day1.sololab:8501
-    #       datacenter: dc1
-    #       scheme: https
-    #       tls:
-    #         ca: /etc/traefik/tls/ca.crt
-    exposedByDefault: false
-    serversTransport:
-      rootCAs:
-        - /etc/traefik/tls/ca.crt
-    global:
-      checkNewVersion: false
-      sendAnonymousUsage: false
-    entryPoints:
-      traefik:
-        address: "192.168.255.10:8080"
-      web:
-        address: "192.168.255.10:80"
-        forwardedHeaders:
-          trustedIPs:
-            - "0.0.0.0/0"
-      webSecure:
-        address: "192.168.255.10:443"
-        forwardedHeaders:
-          trustedIPs:
-            - "0.0.0.0/0"
-    # certificatesResolvers:
-    #   external:
-    #     acme:
-    #       caServer: https://acme-v02.api.letsencrypt.org/directory
-    #       certificatesDuration: 2160
-    #       email: ""
-    #       storage: /mnt/acmeStorage/external.json
-    #       tlsChallenge: {}
-    #   internal:
-    #     acme:
-    #       caServer: https://vault.day1.sololab:8200/v1/pki/day1/acme/directory
-    #       certificatesDuration: 2160
-    #       email: ""
-    #       storage: /mnt/acmeStorage/internal.json
-    #       tlsChallenge: {}
-    log:
-      level: DEBUG
-  dynamicConfigurationFiles:
-    # https://traefik.io/blog/traefik-2-tls-101-23b4fbee81f1/
-    tlsCerts.yaml:
-      tls:
-        certificates:
-          - certFile: /etc/traefik/tls/day0.crt
-            keyFile: /etc/traefik/tls/day0.key
+  configFiles:
+    static:
+      # providers:
+      #   consulCatalog:
+      #     endpoint:
+      #       address: consul.day1.sololab:8501
+      #       datacenter: dc1
+      #       scheme: https
+      #       tls:
+      #         ca: /etc/traefik/tls/ca.crt
+      exposedByDefault: false
+      serversTransport:
+        rootCAs:
+          - /etc/traefik/tls/ca.crt
+      global:
+        checkNewVersion: false
+        sendAnonymousUsage: false
+      entryPoints:
+        traefik:
+          address: "192.168.255.10:8080"
+        web:
+          address: "192.168.255.10:80"
+          forwardedHeaders:
+            trustedIPs:
+              - "0.0.0.0/0"
+        webSecure:
+          address: "192.168.255.10:443"
+          forwardedHeaders:
+            trustedIPs:
+              - "0.0.0.0/0"
+      # certificatesResolvers:
+      #   external:
+      #     acme:
+      #       caServer: https://acme-v02.api.letsencrypt.org/directory
+      #       certificatesDuration: 2160
+      #       email: ""
+      #       storage: /mnt/acmeStorage/external.json
+      #       tlsChallenge: {}
+      #   internal:
+      #     acme:
+      #       caServer: https://vault.day1.sololab:8200/v1/pki/day1/acme/directory
+      #       certificatesDuration: 2160
+      #       email: ""
+      #       storage: /mnt/acmeStorage/internal.json
+      #       tlsChallenge: {}
+      log:
+        level: INFO
+      accessLog: {}
+    dynamic:
+      # https://traefik.io/blog/traefik-2-tls-101-23b4fbee81f1/
+      tlsCerts.yaml:
+        tls:
+          certificates:
+            - certFile: /etc/traefik/tls/day0.crt
+              keyFile: /etc/traefik/tls/day0.key
   podLabels:
     traefik.enable: true
     traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
@@ -84,14 +86,14 @@ traefik:
   extraVolumeMounts:
     - name: docker-socket
       mountPath: /var/run/docker.sock
-    - name: file-provider
+    - name: config-dynamic
       mountPath: /etc/traefik/dynamic
   extraVolumes:
     - name: docker-socket
       hostPath:
         path: /run/user/1001/podman/podman.sock
         type: Socket
-    - name: dynamic
+    - name: config-dynamic
       hostPath:
         path: /var/home/podmgr/traefik-file-provider
 persistence:
