--- a/TerraformWorkShop/Quadlet/minio-infra/podman-minio/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/minio-infra/podman-minio/values-sololab.yaml
@@ -3,45 +3,56 @@ global:
 minio:
   podLabels:
     traefik.enable: true
-    # traefik.tcp.routers.minio-api.entrypoints: webSecure
-    # traefik.tcp.routers.minio-api.rule: HostSNI(`minio.day0.sololab`)
-    # traefik.tcp.routers.minio-api.tls.passthrough: true
-    # traefik.tcp.routers.minio-api.service: minio-api
-    # traefik.tcp.services.minio-api.loadbalancer.server.port: 9000
-    traefik.http.routers.minio-api-redirect.entrypoints: web
-    traefik.http.routers.minio-api-redirect.rule: Host(`minio.day0.sololab`)
-    traefik.http.routers.minio-api-redirect.middlewares: toHttps@file
-    traefik.http.routers.minio-api-redirect.service: minio-api
+    traefik.tcp.routers.minio-api.entrypoints: webSecure
+    traefik.tcp.routers.minio-api.rule: HostSNI(`minio-api.day0.sololab`)
+    traefik.tcp.routers.minio-api.tls.passthrough: true
+    traefik.tcp.routers.minio-api.service: minio-api
+    traefik.tcp.services.minio-api.loadbalancer.server.port: 9000
 
-    traefik.http.routers.minio-api.entrypoints: webSecure
-    traefik.http.routers.minio-api.rule: Host(`minio.day0.sololab`)
-    traefik.http.routers.minio-api.tls: true
-    traefik.http.routers.minio-api.service: minio-api
+    traefik.tcp.routers.minio-console.entrypoints: webSecure
+    traefik.tcp.routers.minio-console.rule: HostSNI(`minio-console.day0.sololab`)
+    traefik.tcp.routers.minio-console.tls.passthrough: true
+    traefik.tcp.routers.minio-console.service: minio-console
+    traefik.tcp.services.minio-console.loadbalancer.server.port: 9001
 
-    traefik.http.services.minio-api.loadBalancer.serversTransport: minio@file
-    traefik.http.services.minio-api.loadbalancer.server.scheme: https
-    traefik.http.services.minio-api.loadbalancer.server.port: 9000
+    # traefik.http.routers.minio-api-redirect.entrypoints: web
+    # traefik.http.routers.minio-api-redirect.rule: Host(`minio.day0.sololab`)
+    # traefik.http.routers.minio-api-redirect.middlewares: toHttps@file
+    # traefik.http.routers.minio-api-redirect.service: minio-api
 
-    traefik.http.routers.minio-console-redirect.entrypoints: web
-    traefik.http.routers.minio-console-redirect.rule: Host(`minio.day0.sololab`) && PathPrefix(`/ui`)
-    traefik.http.routers.minio-console-redirect.service: minio-console
-    traefik.http.routers.minio-console-redirect.middlewares: toHttps@file
+    # traefik.http.routers.minio-api.entrypoints: webSecure
+    # traefik.http.routers.minio-api.rule: Host(`minio.day0.sololab`)
+    # traefik.http.routers.minio-api.tls: true
+    # traefik.http.routers.minio-api.service: minio-api
 
-    traefik.http.routers.minio-console.entrypoints: webSecure
-    traefik.http.routers.minio-console.rule: Host(`minio.day0.sololab`) && PathPrefix(`/ui`)
-    traefik.http.routers.minio-console.middlewares: minio-console-stripprefix@docker
-    traefik.http.routers.minio-console.tls: true
-    traefik.http.routers.minio-console.service: minio-console
-    traefik.http.middlewares.minio-console-stripprefix.stripprefix.prefixes: /ui
+    # traefik.http.services.minio-api.loadBalancer.serversTransport: minio@file
+    # traefik.http.services.minio-api.loadbalancer.server.scheme: https
+    # traefik.http.services.minio-api.loadbalancer.server.port: 9000
 
-    traefik.http.services.minio-console.loadBalancer.serversTransport: minio@file
-    traefik.http.services.minio-console.loadbalancer.server.scheme: https
-    traefik.http.services.minio-console.loadbalancer.server.port: 9001
+    # traefik.http.routers.minio-console-redirect.entrypoints: web
+    # traefik.http.routers.minio-console-redirect.rule: Host(`minio.day0.sololab`) && PathPrefix(`/ui`)
+    # traefik.http.routers.minio-console-redirect.service: minio-console
+    # traefik.http.routers.minio-console-redirect.middlewares: toHttps@file
+
+    # traefik.http.routers.minio-console.entrypoints: webSecure
+    # traefik.http.routers.minio-console.rule: Host(`minio.day0.sololab`) && PathPrefix(`/ui`)
+    # traefik.http.routers.minio-console.middlewares: minio-console-stripprefix@docker
+    # traefik.http.routers.minio-console.tls: true
+    # traefik.http.routers.minio-console.service: minio-console
+    # traefik.http.middlewares.minio-console-stripprefix.stripprefix.prefixes: /ui
+    # traefik.http.middlewares.minio-console-stripprefix.stripprefix.forceSlash: true
+
+    # traefik.http.services.minio-console.loadBalancer.serversTransport: minio@file
+    # traefik.http.services.minio-console.loadbalancer.server.scheme: https
+    # traefik.http.services.minio-console.loadbalancer.server.port: 9001
   config:
     MINIO_OPTS: >-
       --address=192.168.255.10:9000
       --console-address=192.168.255.10:9001
       --certs-dir=/etc/minio/certs
-    MINIO_SERVER_URL: https://minio.day0.sololab
+    MINIO_SERVER_URL: https://minio-api.day0.sololab
     # https://github.com/minio/console/issues/1908#issuecomment-1113587869
-    MINIO_BROWSER_REDIRECT_URL: https://minio.day0.sololab/ui/
+    MINIO_BROWSER_REDIRECT_URL: https://minio-console.day0.sololab
+  extraEnvVars:
+    - name: TZ
+      value: Asia/Shanghai
